--- a/ChangeLog
+++ b/ChangeLog
@@ -5,19 +5,42 @@ This file is referred by some automatic release scripts.
 [Release History (Japanese)]
 
 <!-- BEGIN-LATEST-JP -->
-<li>Polaris Engine/0.99.1 2024/4/12
+<li>Polaris Engine 1.0.2 2024/4/13
   <ul>
-    <li>Polaris Engine 0.99.1</li>
+    <li>変数名のバグを修正</li>
   </ul>
 </li>
 <!-- END-LATEST-JP -->
 
+<li>Polaris Engine 1.0.1 2024/4/12
+  <ul>
+    <li>コンフィグの誤字を修正</li>
+  </ul>
+</li>
+<li>Polaris Engine 1.0.0 2024/4/12
+  <ul>
+    <li>Polaris Engine 1.0.0</li>
+    <li>Mac版は今回含まれていません。</li>
+  </ul>
+</li>
+
 [Release History (English)]
 
 <!-- BEGIN-LATEST-EN -->
-<li>Polaris Engine/0.99.1 2024/4/12
+<li>Polaris Engine 1.0.2 2024/4/13
   <ul>
-    <li>Polaris Engine 0.99.1</li>
+    <li>Fixed a bug of names of variables</li>
   </ul>
 </li>
 <!-- END-LATEST-EN -->
+
+<li>Polaris Engine 1.0.1 2024/4/12
+  <ul>
+    <li>Fixed typo in config.txt</li>
+  </ul>
+</li>
+<li>Polaris Engine 1.0.0 2024/4/12
+  <ul>
+    <li>Polaris Engine 1.0.0</li>
+  </ul>
+</li>
