--- a/ChangeLog
+++ b/ChangeLog
@@ -5,13 +5,18 @@ This file is referred by some automatic release scripts.
 [Release History (Japanese)]
 
 <!-- BEGIN-LATEST-JP -->
+<li>Polaris Engine 1.0.11 2024/4/14
+  <ul>
+    <li>縦書きテンプレにフォントライセンス画像を追加</li>
+  </ul>
+</li>
+<!-- END-LATEST-JP -->
+
 <li>Polaris Engine 1.0.10 2024/4/14
   <ul>
     <li>公式Visual Studio Code拡張の追加 (VScodeからPolaris Engine Extensionをインストール。既存ゲームでは新規テンプレ内の.vscodeフォルダをコピーで有効になります)</li>
   </ul>
 </li>
-<!-- END-LATEST-JP -->
-
 <li>Polaris Engine 1.0.9 2024/4/14
   <ul>
     <li>コンフィグの改善</li>
