--- a/ChangeLog
+++ b/ChangeLog
@@ -7,7 +7,8 @@ This file is referred by some automatic release scripts.
 <!-- BEGIN-LATEST-JP -->
 <li>Polaris Engine 1.0.11 2024/4/14
   <ul>
-    <li>縦書きテンプレにフォントライセンス画像を追加</li>
+    <li>テンプレートのロゴを変更</li>
+    <li>縦書きテンプレートにフォントライセンス画像を追加</li>
   </ul>
 </li>
 <!-- END-LATEST-JP -->
@@ -57,13 +58,18 @@ This file is referred by some automatic release scripts.
 [Release History (English)]
 
 <!-- BEGIN-LATEST-EN -->
+<li>Polaris Engine 1.0.11 2024/4/14
+  <ul>
+    <li>Changed the logo</li>
+  </ul>
+</li>
+<!-- END-LATEST-EN -->
+
 <li>Polaris Engine 1.0.10 2024/4/14
   <ul>
     <li>Added the official Visual Studio Code extension (Please install Polaris Engine Extension from VScode, then copy .vscode folder from a new template)</li>
   </ul>
 </li>
-<!-- END-LATEST-EN -->
-
 <li>Polaris Engine 1.0.9 2024/4/14
   <ul>
     <li>Improved config.txt</li>
