--- a/ChangeLog
+++ b/ChangeLog
@@ -5,12 +5,17 @@ This file is referred by some automatic release scripts.
 [Release History (Japanese)]
 
 <!-- BEGIN-LATEST-JP -->
+<li>Polaris Engine 1.0.14-a 2024/4/15
+  <ul>
+    <li>GitHubからのクラウド自動リリースをテスト</li>
+  </ul>
+</li>
+<!-- END-LATEST-JP -->
 <li>Polaris Engine 1.0.14 2024/4/15
   <ul>
     <li>フォントファイルを修正</li>
   </ul>
 </li>
-<!-- END-LATEST-JP -->
 <li>Polaris Engine 1.0.13 2024/4/15
   <ul>
     <li>コンフィグを修正</li>
@@ -72,12 +77,17 @@ This file is referred by some automatic release scripts.
 [Release History (English)]
 
 <!-- BEGIN-LATEST-EN -->
+<li>Polaris Engine 1.0.14-a 2024/4/15
+  <ul>
+    <li>GitHubからのクラウド自動リリースをテスト</li>
+  </ul>
+</li>
+<!-- END-LATEST-EN -->
 <li>Polaris Engine 1.0.14 2024/4/15
   <ul>
     <li>Fixed the font files</li>
   </ul>
 </li>
-<!-- END-LATEST-EN -->
 <li>Polaris Engine 1.0.13 2024/4/15
   <ul>
     <li>Fixed the configs</li>
