--- a/ChangeLog
+++ b/ChangeLog
@@ -5,7 +5,7 @@ This file is referred by some automatic release scripts.
 [Release History (Japanese)]
 
 <!-- BEGIN-LATEST-JP -->
-<li>Polaris Engine 1.0.15-q 2024/4/15
+<li>Polaris Engine 1.0.15-r 2024/4/15
   <ul>
     <li>GitHubからのクラウド自動リリースをテスト</li>
   </ul>
