--- a/ChangeLog
+++ b/ChangeLog
@@ -7,9 +7,9 @@ testing..
 [Release History (Japanese)]
 
 <!-- BEGIN-LATEST-JP -->
-<li>Polaris Engine 1.0.15 2024/4/15
+<li>Polaris Engine 1.0.16 2024/4/16
   <ul>
-    <li>GitHubからのクラウド自動リリースをテスト</li>
+    <li>Windowsで画面サイズが足りない場合に全画面で起動するように変更</li>
   </ul>
 </li>
 <!-- END-LATEST-JP -->
@@ -79,12 +79,17 @@ testing..
 [Release History (English)]
 
 <!-- BEGIN-LATEST-EN -->
+<li>Polaris Engine 1.0.16 2024/4/16
+  <ul>
+    <li>Changed to export macOS Xcode project instead of dmg</li>
+  </ul>
+</li>
+<!-- END-LATEST-EN -->
 <li>Polaris Engine 1.0.15 2024/4/15
   <ul>
     <li>GitHubからのクラウド自動リリースをテスト</li>
   </ul>
 </li>
-<!-- END-LATEST-EN -->
 <li>Polaris Engine 1.0.14 2024/4/15
   <ul>
     <li>Fixed the font files</li>
