--- a/ChangeLog
+++ b/ChangeLog
@@ -2,17 +2,20 @@
 
 This file is referred by some automatic release scripts.
 
-testing..
-
 [Release History (Japanese)]
 
 <!-- BEGIN-LATEST-JP -->
+<li>Polaris Engine 1.0.17 2024/4/16
+  <ul>
+    <li>自動リリーステスト</li>
+  </ul>
+</li>
+<!-- END-LATEST-JP -->
 <li>Polaris Engine 1.0.16 2024/4/16
   <ul>
     <li>Windowsで画面サイズが足りない場合に全画面で起動するように変更</li>
   </ul>
 </li>
-<!-- END-LATEST-JP -->
 <li>Polaris Engine 1.0.14 2024/4/15
   <ul>
     <li>フォントファイルを修正</li>
@@ -79,12 +82,17 @@ testing..
 [Release History (English)]
 
 <!-- BEGIN-LATEST-EN -->
+<li>Polaris Engine 1.0.17 2024/4/16
+  <ul>
+    <li>Auto release test</li>
+  </ul>
+</li>
+<!-- END-LATEST-EN -->
 <li>Polaris Engine 1.0.16 2024/4/16
   <ul>
     <li>Changed to export macOS Xcode project instead of dmg</li>
   </ul>
 </li>
-<!-- END-LATEST-EN -->
 <li>Polaris Engine 1.0.15 2024/4/15
   <ul>
     <li>GitHubからのクラウド自動リリースをテスト</li>
@@ -150,22 +158,4 @@ testing..
     <li>Polaris Engine 1.0.0</li>
   </ul>
 </li>
-.
-.
-.
-.
-.
-.
-.
-.
-.
-.
-.
-.
-.
-.
-.
-.
-.
-.
-.
+..
