--- a/ChangeLog
+++ b/ChangeLog
@@ -5,12 +5,18 @@ This file is referred by some automatic release scripts.
 [Release History (Japanese)]
 
 <!-- BEGIN-LATEST-JP -->
+<li>Polaris Engine 1.1.0 2024/4/22
+  <ul>
+    <li>ORBISライブラリを導入</li>
+    <li>Cielの修正</li>
+  </ul>
+</li>
+<!-- END-LATEST-JP -->
 <li>Polaris Engine 1.0.22 2024/4/21
   <ul>
     <li>内部的な修正</li>
   </ul>
 </li>
-<!-- END-LATEST-JP -->
 <li>Polaris Engine 1.0.21 2024/4/21
   <ul>
     <li>Ubuntu版の修正</li>
@@ -108,12 +114,18 @@ This file is referred by some automatic release scripts.
 [Release History (English)]
 
 <!-- BEGIN-LATEST-EN -->
+<li>Polaris Engine 1.1.0 2024/4/22
+  <ul>
+    <li>Introduced ORBIS Library</li>
+    <li>Fixed Ciel</li>
+  </ul>
+</li>
+<!-- END-LATEST-EN -->
 <li>Polaris Engine 1.0.22 2024/4/21
   <ul>
     <li>Internal fixes</li>
   </ul>
 </li>
-<!-- END-LATEST-EN -->
 <li>Polaris Engine 1.0.21 2024/4/21
   <ul>
     <li>Fixed Ubuntu PPA</li>
