Fixed a bug of gosub behaviours of CUSTOM1/2 SysMenu buttons

--- a/ChangeLog
+++ b/ChangeLog
@@ -5,13 +5,18 @@ This file is referred by some automatic release scripts.
 [Release History (Japanese)]
 
 <!-- BEGIN-LATEST-JP -->
+<li>Polaris Engine 1.1.3 2024/4/23
+  <ul>
+    <li>カスタム1/2ボタンのgosub動作のバグを修正</li>
+  </ul>
+</li>
+<!-- END-LATEST-JP -->
 <li>Polaris Engine 1.1.2 2024/4/23
   <ul>
     <li>switchコマンドのバグ修正</li>
     <li>switchコマンドの非推奨化</li>
   </ul>
 </li>
-<!-- END-LATEST-JP -->
 <li>Polaris Engine 1.1.1 2024/4/22
   <ul>
     <li>ORBISライブラリの修正</li>
@@ -119,13 +124,18 @@ This file is referred by some automatic release scripts.
 [Release History (English)]
 
 <!-- BEGIN-LATEST-EN -->
+<li>Polaris Engine 1.1.3 2024/4/23
+  <ul>
+    <li>Fixed a bug of gosub behaviours of CUSTOM1/2 SysMenu buttons</li>
+  </ul>
+</li>
+<!-- END-LATEST-EN -->
 <li>Polaris Engine 1.1.2 2024/4/23
   <ul>
     <li>Fixed a bug of the switch command</li>
     <li>Deprecated usages of the switch command</li>
   </ul>
 </li>
-<!-- END-LATEST-EN -->
 <li>Polaris Engine 1.1.1 2024/4/22
   <ul>
     <li>ORBISライブラリの修正</li>
