--- a/ChangeLog
+++ b/ChangeLog
@@ -3,14 +3,18 @@
 This file is referred by some automatic release scripts.
 
 [Release History (Japanese)]
-
 <!-- BEGIN-LATEST-JP -->
+<li>Polaris Engine 1.1.6 2024/4/24
+  <ul>
+    <li>カッコではじまる文章の場合、２行目をカッコの分だけ字下げするように改善</li>
+  </ul>
+</li>
+<!-- END-LATEST-JP -->
 <li>Polaris Engine 1.1.5 2024/4/24
   <ul>
     <li>10回に2回程度、2回まばたきするように変更</li>
   </ul>
 </li>
-<!-- END-LATEST-JP -->
 <li>Polaris Engine 1.1.4 2024/4/24
   <ul>
     <li>cha/all/cl.runでキャラを移動したときに目パチを再設定するように修正</li>
@@ -132,14 +136,18 @@ This file is referred by some automatic release scripts.
 </li>
 
 [Release History (English)]
-
 <!-- BEGIN-LATEST-EN -->
+<li>Polaris Engine 1.1.6 2024/4/24
+  <ul>
+    <li>Added Japanese indent</li>
+  </ul>
+</li>
+<!-- END-LATEST-EN -->
 <li>Polaris Engine 1.1.5 2024/4/24
   <ul>
     <li>Added a twice-eye-blinking (20% probalility)</li>
   </ul>
 </li>
-<!-- END-LATEST-EN -->
 <li>Polaris Engine 1.1.4 2024/4/24
   <ul>
     <li>Fixed a bug where an eye-blink layer is not moved on cha/all/cl.run</li>
