Added a config serif.quote.indent

--- a/ChangeLog
+++ b/ChangeLog
@@ -4,12 +4,17 @@ This file is referred by some automatic release scripts.
 
 [Release History (Japanese)]
 <!-- BEGIN-LATEST-JP -->
+<li>Polaris Engine 1.1.10 2024/4/24
+  <ul>
+    <li>自動インデントをコンフィグ化(serif.quote.indent)</li>
+  </ul>
+</li>
+<!-- END-LATEST-JP -->
 <li>Polaris Engine 1.1.9 2024/4/24
   <ul>
     <li>簡単な補完を実装</li>
   </ul>
 </li>
-<!-- END-LATEST-JP -->
 <li>Polaris Engine 1.1.8 2024/4/24
   <ul>
     <li>シナリオを保存した際にusingブロックが展開されてしまうバグを修正</li>
@@ -152,12 +157,17 @@ This file is referred by some automatic release scripts.
 
 [Release History (English)]
 <!-- BEGIN-LATEST-EN -->
+<li>Polaris Engine 1.1.10 2024/4/24
+  <ul>
+    <li>Added a config serif.quote.indent</li>
+  </ul>
+</li>
+<!-- END-LATEST-EN -->
 <li>Polaris Engine 1.1.9 2024/4/24
   <ul>
     <li>Implemented a simple completion</li>
   </ul>
 </li>
-<!-- END-LATEST-EN -->
 <li>Polaris Engine 1.1.8 2024/4/24
   <ul>
     <li>Fixed a bug where using blocks are expanded</li>
