--- a/ChangeLog
+++ b/ChangeLog
@@ -4,12 +4,17 @@ This file is referred by some automatic release scripts.
 
 [Release History (Japanese)]
 <!-- BEGIN-LATEST-JP -->
+<li>Polaris Engine 1.1.11 2024/4/24
+  <ul>
+    <li>カスタムシステムメニューのGUIのglobalセクションにpushstageフラグを追加、gosub後にs2_pop_stage()で復元可能に</li>
+  </ul>
+</li>
+<!-- END-LATEST-JP -->
 <li>Polaris Engine 1.1.10 2024/4/24
   <ul>
     <li>自動インデントをコンフィグ化(serif.quote.indent)</li>
   </ul>
 </li>
-<!-- END-LATEST-JP -->
 <li>Polaris Engine 1.1.9 2024/4/24
   <ul>
     <li>簡単な補完を実装</li>
@@ -157,12 +162,17 @@ This file is referred by some automatic release scripts.
 
 [Release History (English)]
 <!-- BEGIN-LATEST-EN -->
+<li>Polaris Engine 1.1.11 2024/4/24
+  <ul>
+    <li>Added pushstage flag to the global section of GUI, made it possible to call s2_pop_stage()</li>
+  </ul>
+</li>
+<!-- END-LATEST-EN -->
 <li>Polaris Engine 1.1.10 2024/4/24
   <ul>
     <li>Added a config serif.quote.indent</li>
   </ul>
 </li>
-<!-- END-LATEST-EN -->
 <li>Polaris Engine 1.1.9 2024/4/24
   <ul>
     <li>Implemented a simple completion</li>
