--- a/ChangeLog
+++ b/ChangeLog
@@ -4,12 +4,18 @@ This file is referred by some automatic release scripts.
 
 [Release History (Japanese)]
 <!-- BEGIN-LATEST-JP -->
+<li>Polaris Engine 1.1.18 2024/4/27
+  <ul>
+    <li>日本語ライト・ダークの微修正</li>
+    <li>アニメファイルでaccel:プロパティを強化 (normal,accel,brakeを指定可能)</li>
+  </ul>
+</li>
+<!-- END-LATEST-JP -->
 <li>Polaris Engine 1.1.17 2024/4/26
   <ul>
     <li>ヒストリーが表示されないバグを修正 (GUIからのgosub機能を追加した際のデグレード)</li>
   </ul>
 </li>
-<!-- END-LATEST-JP -->
 <li>Polaris Engine 1.1.16 2024/4/25
   <ul>
     <li>newsコマンドを修正</li>
@@ -192,12 +198,18 @@ This file is referred by some automatic release scripts.
 
 [Release History (English)]
 <!-- BEGIN-LATEST-EN -->
+<li>Polaris Engine 1.1.18 2024/4/27
+  <ul>
+    <li>Slightly fixed the Japanese light and dark templates</li>
+    <li>Improved the accel: property of anime files (normal,accel,brake)</li>
+  </ul>
+</li>
+<!-- END-LATEST-EN -->
 <li>Polaris Engine 1.1.17 2024/4/26
   <ul>
     <li>Fixed a degrade bug where history cannot be shown</li>
   </ul>
 </li>
-<!-- END-LATEST-EN -->
 <li>Polaris Engine 1.1.16 2024/4/25
   <ul>
     <li>Fixed the news command</li>
