--- a/ChangeLog
+++ b/ChangeLog
@@ -4,12 +4,17 @@ This file is referred by some automatic release scripts.
 
 [Release History (Japanese)]
 <!-- BEGIN-LATEST-JP -->
+<li>Polaris Engine 1.2.0 2024/5/2
+  <ul>
+    <li>Unity対応の最初のアルファ版</li>
+  </ul>
+</li>
+<!-- END-LATEST-JP -->
 <li>Polaris Engine 1.1.24 2024/5/1
   <ul>
     <li>libpngのバージョンアップ(Windows番のAndroid Studioでのビルドに対応)</li>
   </ul>
 </li>
-<!-- END-LATEST-JP -->
 <li>Polaris Engine 1.1.23 2024/5/1
   <ul>
     <li>Android版の修正</li>
@@ -228,12 +233,17 @@ This file is referred by some automatic release scripts.
 
 [Release History (English)]
 <!-- BEGIN-LATEST-EN -->
+<li>Polaris Engine 1.2.0 2024/5/2
+  <ul>
+    <li>The first public alpha version of Unity support</li>
+  </ul>
+</li>
+<!-- END-LATEST-EN -->
 <li>Polaris Engine 1.1.24 2024/5/1
   <ul>
     <li>Updated libpng from 1.6.35 to 1.6.43 (for cmake on Android NDK)</li>
   </ul>
 </li>
-<!-- END-LATEST-EN -->
 <li>Polaris Engine 1.1.23 2024/5/1
   <ul>
     <li>Fixed the Android export</li>
