--- a/ChangeLog
+++ b/ChangeLog
@@ -4,12 +4,18 @@ This file is referred by some automatic release scripts.
 
 [Release History (Japanese)]
 <!-- BEGIN-LATEST-JP -->
+<li>Polaris Engine 1.2.5 2024/5/7
+  <ul>
+    <li>口パクに対応</li>
+    <li>AndroidのAPKファイルの自動ビルドに対応</li>
+  </ul>
+</li>
+<!-- END-LATEST-JP -->
 <li>Polaris Engine 1.2.4 2024/5/5
   <ul>
     <li>Windows版Android Studioでのビルドの改善</li>
   </ul>
 </li>
-<!-- END-LATEST-JP -->
 <li>Polaris Engine 1.2.3 2024/5/5
   <ul>
     <li>GUI機能で右クリックキャンセルした際にgosub-backボタンがあればその動作をするように変更</li>
@@ -254,12 +260,18 @@ This file is referred by some automatic release scripts.
 
 [Release History (English)]
 <!-- BEGIN-LATEST-EN -->
+<li>Polaris Engine 1.2.5 2024/5/7
+  <ul>
+    <li>Added lip-sync</li>
+    <li>Supported automatic build of Android APK on Windows</li>
+  </ul>
+</li>
+<!-- END-LATEST-EN -->
 <li>Polaris Engine 1.2.4 2024/5/5
   <ul>
     <li>Fixed a problem on builds on the Windows version of Android Studio</li>
   </ul>
 </li>
-<!-- END-LATEST-EN -->
 <li>Polaris Engine 1.2.3 2024/5/5
   <ul>
     <li>Changed to use a gosub-back button if it exists when right-clicked on a GUI</li>
