Changed to insert 4 spaces if it is not a completion

--- a/ChangeLog
+++ b/ChangeLog
@@ -4,13 +4,18 @@ This file is referred by some automatic release scripts.
 
 [Release History (Japanese)]
 <!-- BEGIN-LATEST-JP -->
+<li>Polaris Engine 1.2.21 2024/5/9
+  <ul>
+    <li>補完以外の場合、タブキーで4つスペースを入力するように変更</li>
+  </ul>
+</li>
+<!-- END-LATEST-JP -->
 <li>Polaris Engine 1.2.20 2024/5/9
   <ul>
     <li>ファイル選択のキャンセル時にシナリオが再ロードされるバグを修正</li>
     <li>Shift+EnterとEnterの挙動を入れ替え</li>
   </ul>
 </li>
-<!-- END-LATEST-JP -->
 <li>Polaris Engine 1.2.19 2024/5/9
   <ul>
     <li>シナリオ末尾がラベル等のときのチラつきを抑制</li>
@@ -338,13 +343,18 @@ This file is referred by some automatic release scripts.
 
 [Release History (English)]
 <!-- BEGIN-LATEST-EN -->
+<li>Polaris Engine 1.2.21 2024/5/9
+  <ul>
+    <li>Changed to insert 4 spaces if it is not a completion</li>
+  </ul>
+</li>
+<!-- END-LATEST-EN -->
 <li>Polaris Engine 1.2.20 2024/5/9
   <ul>
     <li>Fixed a bug of file open dialog</li>
     <li>Swapped the behavior of Shift+Enter and Enter</li>
   </ul>
 </li>
-<!-- END-LATEST-EN -->
 <li>Polaris Engine 1.2.19 2024/5/9
   <ul>
     <li>Fixed a flicker</li>
