Avoided a file choose dialog bug

--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,12 @@ This file is referred by some automatic release scripts.
 
 [Release History (Japanese)]
 <!-- BEGIN-LATEST-JP -->
+<li>Polaris Engine 1.2.25 2024/5/9
+  <ul>
+    <li>ファイル選択のバグを回避</li>
+  </ul>
+</li>
+<!-- END-LATEST-JP -->
 <li>Polaris Engine 1.2.24 2024/5/9
   <ul>
     <li>「続ける」ボタンを押したときに編集を反映するように修正</li>
@@ -11,7 +17,6 @@ This file is referred by some automatic release scripts.
     <li>ファイル選択のバグを修正</li>
   </ul>
 </li>
-<!-- END-LATEST-JP -->
 <li>Polaris Engine 1.2.23 2024/5/9
   <ul>
     <li>Linuxでのビルドを改善 (RedHat系に対応)</li>
@@ -360,6 +365,12 @@ This file is referred by some automatic release scripts.
 
 [Release History (English)]
 <!-- BEGIN-LATEST-EN -->
+<li>Polaris Engine 1.2.25 2024/5/9
+  <ul>
+    <li>Avoided a bug of file dialog cancel</li>
+  </ul>
+</li>
+<!-- END-LATEST-EN -->
 <li>Polaris Engine 1.2.24 2024/5/9
   <ul>
     <li>Changed to apply scenario when the Continue button pressed</li>
@@ -367,7 +378,6 @@ This file is referred by some automatic release scripts.
     <li>Fixed a bug of folder choice</li>
   </ul>
 </li>
-<!-- END-LATEST-EN -->
 <li>Polaris Engine 1.2.23 2024/5/9
   <ul>
     <li>Improved builds on Linux (supported Fedora and RedHat)</li>
